# ethsnarks

./: .gitignore  .gitmodules  .solhint.json  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  README.md  appveyor.yml  package.json  prover_reference_functions.cpp  requirements-dev.txt  requirements.txt
.appendix/: arith-coding-window-6.py  benchmark-jubjub.py  fast-add.py  find_loworder_points.py  mimc.js  mimceddsa.py  mixed-addition.py  primes.py
appendix/: 2-bit-window.py  ejubjub.sage  fast-add.py  mixed-addition.py  three-bit-window.py
contracts/: ETEC.sol  EdDSA.sol  JubJub.sol  JubJubPublic.sol  LongsightL.sol  MerkleTree.sol  MiMC.sol  MiMC_hash.sol  MiMC_permutation.sol  MiMCpe5_generated.sol  MiMCpe7_generated.sol  Miximus.sol  ModArith.sol  Pairing.sol  SnarkUtils.sol  TestableMiximus.sol  Verifier.sol  wNAF.sol
depends/: CMakeLists.txt
ethsnarks/: eddsa.py  field.py  jubjub.py  longsight.py  merkletree.py  mimc.py  pedersen.py  poseidon.py
ethsnarks/mimc/: contract.py  permutation.py
ethsnarks/poseidon/: permutation.py
migrations/: 2_MiMC_permutation.js  2_libraries.js  3_MiMC_hash.js  4_MerkleTree.js
pinocchio/: ArithBusReq.py  ArithBuses.py  ArithFactory.py  ArithmeticFieldOps.py  BaseEval.py  BitWidth.py  Board.py  BooleanBusReq.py  BooleanBuses.py  BooleanFactory.py  BooleanFieldOps.py  BusReq.py  Buses.py  Collapser.py  DFG.py  FieldOps.py  ReqFactory.py  Storage.py  Struct.py  Symtab.py  Wires.py  __main__.py  aritheval.py  booleval.py  count.py  dfgexec.py  drawcircuit.py  make-random-header.py  vercomp.py
prover_reference_include/: prover_reference_functions.hpp
src/: CMakeLists.txt  ethsnarks.hpp  export.cpp  export.hpp  import.cpp  import.hpp  jubjub.hpp  md32_common.h  miximus_cli.cpp  prover_config.hpp  serialization.hpp  sha256.c  stubs.cpp  stubs.hpp  utils.cpp  utils.hpp  verify.cpp  verify_dll.cpp  websnark.cpp  websnark.hpp
src/crypto/: blake2b.c  blake2b.h  sha256.h
src/gadgets/: CMakeLists.txt  field2bits_strict.cpp  field2bits_strict.hpp  isnonzero.cpp  isnonzero.hpp  longsightl.hpp  lookup_1bit.cpp  lookup_1bit.hpp  lookup_2bit.cpp  lookup_2bit.hpp  lookup_3bit.cpp  lookup_3bit.hpp  lookup_signed_3bit.cpp  lookup_signed_3bit.hpp  merkle_tree.cpp  merkle_tree.hpp  mimc.hpp  one_of_n.hpp  onewayfunction.hpp  poseidon.hpp  sha256_full.hpp  sha256_many.cpp  sha256_many.hpp  shamir_poly.hpp  subadd.cpp  subadd.hpp
src/jubjub/: CMakeLists.txt  README.md  adder.cpp  adder.hpp  commitment.cpp  commitment.hpp  conditional_point.cpp  conditional_point.hpp  curve.cpp  curve.hpp  doubler.cpp  doubler.hpp  eddsa.cpp  eddsa.hpp  eddsa.tcc  fixed_base_mul.cpp  fixed_base_mul.hpp  fixed_base_mul_zcash.cpp  fixed_base_mul_zcash.hpp  isoncurve.cpp  isoncurve.hpp  montgomery.cpp  montgomery.hpp  notloworder.cpp  notloworder.hpp  params.hpp  pedersen_commitment.cpp  pedersen_commitment.hpp  pedersen_hash.cpp  pedersen_hash.hpp  point.cpp  point.hpp  scalarmult.cpp  scalarmult.hpp  validator.cpp  validator.hpp
src/mod/: hashpreimage.cpp  miximus.cpp
src/pinocchio/: CMakeLists.txt  README.md  circuit_reader.cpp  circuit_reader.hpp  jsnark_test.cpp  main.cpp  run_libsnark.cpp
src/prover_reference/: CMakeLists.txt  prover_reference_functions.cpp
src/r1cs_gg_ppzksnark_zok/: README.md  r1cs_gg_ppzksnark_zok.hpp  r1cs_gg_ppzksnark_zok.tcc
src/test/: CMakeLists.txt  test_field2bits.cpp  test_field_packing.cpp  test_isnonzero.cpp  test_jubjub.cpp  test_jubjub_add.cpp  test_jubjub_dbl.cpp  test_jubjub_mul.cpp  test_longsightl_hash_mp.cpp  test_lookup_1bit.cpp  test_lookup_2bit.cpp  test_lookup_3bit.cpp  test_merkle_tree.cpp  test_mimc.cpp  test_mimc_hash.cpp  test_one_of_n.cpp  test_poseidon.cpp  test_sha256_full_gadget.cpp  test_sha256_many.cpp  test_shamir_poly.cpp  test_subadd.cpp  test_websnark_write.cpp
src/test/benchmark/: CMakeLists.txt
src/test/jubjub/: CMakeLists.txt  test_jubjub.cpp  test_jubjub_add.cpp  test_jubjub_commitment.cpp  test_jubjub_dbl.cpp  test_jubjub_eddsa.cpp  test_jubjub_hash.cpp  test_jubjub_isoncurve.cpp  test_jubjub_mul.cpp  test_jubjub_mul_fixed.cpp  test_jubjub_mul_fixed_zcash.cpp  test_jubjub_notloworder.cpp  test_jubjub_point.cpp
src/utils/: CMakeLists.txt  mimc.cpp
test/: TestJubJub.js  TestJubJub.sol  TestMerkleTree.sol  TestMiMC.js  TestMiMC.sol  TestMiximus.js  TestSnarkUtils.sol  TestVerifier.sol  test_eddsa.py  test_hashpreimage.py  test_jubjub.py  test_merkle.py  test_mimc.py  test_mimc_evm.py  test_pedersen.py  test_poseidon.py  test_poseidon_evm.py  test_shamir_poly.py  test_verify.py
test/pinocchio/: table1.circuit  table2.circuit  table2.pinocchio  table3.pinocchio
utils/: generate-artifacts.js
